--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
   "labels": [
     "renovate"
   ],
+  "enabledManagers": ["dockerfile", "npm"],
   "vulnerabilityAlerts": {
     "enabled": true
   }
