--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,10 @@
   "enabledManagers": ["dockerfile", "npm"],
   "packageRules": [
     {
+      "matchUpdateTypes": ["security"],
+      "addLabels": "security"
+    },
+    {
       "matchPackagePatterns": ["*"],
       "enabled": true
     }
